--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-* {
+body {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -17,13 +17,19 @@
 .nav {
     align-self: flex-end;
     justify-content: space-evenly;
+    margin-right:25px;
+}
+
+.nav h4 {
+    padding-top: 25px;
 }
 
 .nav ul li a {
     text-decoration: none;
     color: #1a1818;
-    padding: 25px;
+    padding: 5px;
     flex-wrap: nowrap;
+    border-right: 1px solid #ECECEC;
 }
 
 .cta {
@@ -62,4 +68,24 @@
 
 .cta button a  {
     font-size: 20px;
+}
+
+button.orange {
+    color: white;
+    border: 1px solid #FB8F3D; 
+    background: -webkit-linear-gradient(top, #FDA251, #FB8F3D);
+    background: -moz-linear-gradient(top, #FDA251, #FB8F3D);
+    background: -ms-linear-gradient(top, #FDA251, #FB8F3D);
+}
+
+button.orange:hover {
+    border: 1px solid rgb(12, 12, 12);
+    background: -webkit-linear-gradient(top, #FD924C, #F9760B); 
+    background: -moz-linear-gradient(top, #FD924C, #F9760B); 
+    background: -ms-linear-gradient(top, #FD924C, #F9760B); 
+    box-shadow: 0 1px #EFEFEF;
+}
+
+button.orange:active {
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.3);
 }
