--- a/main.css
+++ b/main.css
@@ -89,3 +89,18 @@ button.orange:hover {
 button.orange:active {
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.3);
 }
+
+.text-pannels {
+    display: flex;
+    align-items: center;
+}
+
+.text-pannels p {
+    padding: 5px;
+    margin: 25px;
+    line-height: 1.3em;
+}
+
+.text-pannels > div {
+    flex: 1;
+}
