--- a/main.css
+++ b/main.css
@@ -3,6 +3,24 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+body p {
+    font-size: 1.2em;
+}
+body h3{
+    font-size: 1.7em;
+}
+
+body h1 {
+    font-size: 2em;
+}
+body h2 {
+    font-size: 1.9em;
+}
+
+html { font-size: 75%;}
+@media only screen and (max-device-width: 480px) {
+	html { font-size: 100%; }
+}
 
 .header {
     display: flex;
@@ -22,7 +40,14 @@ body {
 
 .nav h4 {
     padding-top: 25px;
+    align-self: flex-start;
+    margin-right: 40px;
 }
+.nav h4 strong {
+    padding-top: 25px;
+    font-weight: bold;
+}
+
 
 .nav ul li a {
     text-decoration: none;
@@ -34,14 +59,14 @@ body {
 
 .cta {
     margin-top: 2%;
-    background: darkgoldenrod;
+    background: #66527B;
     min-height: 10em;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    border-top: 5px solid #1a1818;
+    border-top: 1px solid #1a1818;
     flex: 1;
 }
 
@@ -71,18 +96,15 @@ body {
 }
 
 button.orange {
-    color: white;
-    border: 1px solid #FB8F3D; 
-    background: -webkit-linear-gradient(top, #FDA251, #FB8F3D);
-    background: -moz-linear-gradient(top, #FDA251, #FB8F3D);
-    background: -ms-linear-gradient(top, #FDA251, #FB8F3D);
+    background: #f90;
+    color: #FFF;
+    border: 4px solid #f90;
 }
 
 button.orange:hover {
-    border: 1px solid rgb(12, 12, 12);
-    background: -webkit-linear-gradient(top, #FD924C, #F9760B); 
-    background: -moz-linear-gradient(top, #FD924C, #F9760B); 
-    background: -ms-linear-gradient(top, #FD924C, #F9760B); 
+    background: #f90;
+    color: #FFF;
+    border: 4px solid #f90;
     box-shadow: 0 1px #EFEFEF;
 }
 
@@ -92,13 +114,11 @@ button.orange:active {
 
 .text-pannels {
     display: flex;
-    align-items: center;
+    padding: 25px;
 }
 
-.text-pannels p {
-    padding: 5px;
-    margin: 25px;
-    line-height: 1.3em;
+.text-pannels h3, p {
+    line-height: 1.8em;
 }
 
 .text-pannels > div {
